amaroK ChangeLog
================
(c) 2002-2005 the amaroK authors.


VERSION 1.2-beta4:
  ADD: Playlist2html, a script for playlist exporting. (BR 96199)
  ADD: Improved statusbar, with animated error notification widget.
  ADD: New progress display system, can show multiple expandable
       progress widgets in the statusbar.
  ADD: Alarm script, starts playing music at specified alarm time.
  ADD: Script-Manager for DCOP script extensions is now functional.
  ADD: Collection-Browser shows a help message in flat-mode when filter is
       empty. (BR 97000)
  CHG: It is possible to select the Database Engine (SQLite, MySQL) runtime,
       without amaroK restart. New Database Engines can be added, they need
       to inherit DbConnection and implement its' virtual methods (see
       SqliteConnection and MySqlConnection).
  CHG: New amaroK icon "Blue Wolf", made by Da-Flow.
  FIX: Possible crash when enabling Player-Window. (BR 94668)

VERSION 1.2-beta3:
  ADD: Smart Playlists can have a random order or a score weighted random
       order (BR 90861)
  ADD: Show total length of selected songs in statusbar. (BR 90284)
  ADD: Context-Browser now caches the tab widgets. Patch from Matias
       Costa <mcc3@alu.um.es>. (BR 95999)
  FIX: RAND and REP buttons were always enabled at startup. (BR 95861)
  ADD: Implemented "Append Suggestions" functionality. It means that when
       enabled, amaroK will append a couple of suggested songs to playlist
       when you play a track. This produces a continuous playlist, something
       similar to listening to radio.
  ADD: Implemented "Play Media..." functionality.
  FIX: Playlist-Browser was appending to playlist when clicking "Load".
       Now it replaces the current playlist again, as intended.
  ADD: Profile for KDELIRC (Remote Controls). Patch by Dirk Ziegelmeier
       <dziegel@gmx.de>.
  ADD: Remove Duplicates now also removes dead entries from playlist.
  FIX: Accept album-dragging from the ContextBrowser. (BR 86020)