@@ -45,9 +45,10 @@ k_dcop:
    virtual void addMediaList(const KURL::List &) = 0;       ///< Add some audio media specified by the url.
 
    virtual void scanCollection() = 0;                       ///< Scan the collection.
-   
+
    virtual void clearPlaylist() = 0;                        ///< Clears the playlist.
    virtual void shufflePlaylist() = 0;                      ///< Shuffles the playlist.
+   virtual void saveCurrentPlaylist() = 0;                  ///< Saves the current playlist to current.xml
 
    /* These two methods return raw time in seconds, this is useful for apps like mediacontrol, which calculate
       track lengths and positions in seconds. DO NOT TOUCH! */
@@ -66,7 +67,7 @@ k_dcop:
    /* New player API */
    virtual QString artist() = 0;                            ///< Return the artist of the currently playing track.
    virtual QString title() = 0;                             ///< Return the title of the currently playing track.
-   virtual QString track() = 0;                                 ///< Return the track number.
+   virtual QString track() = 0;                             ///< Return the track number.
    virtual QString album() = 0;                             ///< Return the album of the currently playing track.
    virtual QString totalTime() = 0;                         ///< Return the total length of the currently playing track ([h:]mm:ss format).
    virtual QString currentTime() = 0;                       ///< Return the position of the currently playing track ([h:]mm:ss format).
@@ -74,7 +75,7 @@ k_dcop:
    virtual QString year() = 0;                              ///< Return the year of the currently playing track.
    virtual QString comment() = 0;                           ///< Return the comment of the currently playing track.
    virtual QString bitrate() = 0;                           ///< Return the bitrate of the currently playing track (XX kbps).
-   virtual int sampleRate() = 0;                        ///< Return the sample rate of the currently playing track.
+   virtual int sampleRate() = 0;                            ///< Return the sample rate of the currently playing track.
    virtual QString encodedURL() = 0;                        ///< Return the encoded URL of the currently playing track.
    virtual QString coverImage() = 0;                        ///< Return the encoded URL of the current track's cover image
 
@@ -89,8 +90,8 @@ k_dcop:
    virtual void showOSD() = 0;                              ///< Show the OSD display on the screen.
 
    virtual void togglePlaylist() = 0;                       ///< Toggle the Playlist-window
-   virtual int score() = 0;                                ///<Return the score of the currently playing track.
-   virtual void playMedia(const KURL &) = 0;                 ///< Add audio media specified by the url.
+   virtual int  score() = 0;                                ///< Return the score of the currently playing track.
+   virtual void playMedia(const KURL &) = 0;                ///< Add audio media specified by the url.
 };
 
 #endif
